--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.2.6",
+    "cheerio": "^1.0.0-rc.12",
     "cli-color": "^2.0.3",
     "cli-progress": "^3.11.2",
     "cli-spinners": "^2.7.0",
